refine AI and authentication boundaries